# sparta

./: db.sqlite3  pyproject.toml  test.sh
.github/workflows/: ci.yml
sparta/: settings.py  urls.py
